# recruitment-tasks

./: README.md
Exercise 1/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.hpp
Exercise 2/: CMakeLists.txt  collision_detection.cpp  collision_detection.hpp  main.cpp
Exercise 3/: CMakeLists.txt  main.cpp  string_support.cpp  string_support.hpp
